--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -129,6 +129,7 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1>The next generation of crowd funding is here</h1>
+                <h4>Bitpieces gives content creators, small businesses, and community projects a way to raise funding by issuing pieces of their brand, and sharing profits with their funders through monetary rewards over time.</h4>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
