--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -128,8 +128,7 @@
             </div>
             <div class="container">
               <div class="carousel-caption">
-                <h1>Bitpieces gives content creators, small businesses, and community projects a way to raise funding by issuing pieces of their brand, and sharing profits with their funders through monetary rewards over time.</h1>
-                <h4></h4>
+                <h1>The next generation of crowd funding is here</h1>
                 <p></p>
                 <p><a class="btn btn-lg btn-primary" href="#" 
                   data-toggle="modal" data-target="#userloginModal" role="button">Sign up</a></p>
@@ -173,6 +172,13 @@
 
       <div class="container marketing">
 
+        <div id="what_is_bitpieces" class="row featurette">
+        <div class="col-md-12">
+        <h2 class="featurette-heading">What is <span class="text-muted">Bitpieces? </span></h2>
+         <p class="lead"> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">issuing pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
+            </p>
+        </div>
+        </div>
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
