--- a/resources/web/summernote/examples/ondialog.html
+++ b/resources/web/summernote/examples/ondialog.html
@@ -36,12 +36,12 @@
         <div id="dropping">text...</div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default pull-left">
+        <button type="button" class="btn btn-primary pull-left">
           <span class='fa fa-paperclip '></span>
           Attach Digital Assets
         </button>
         <div class="btn-group">
-          <button type="button" class="btn btn-default opacity75" class="close" data-dismiss="modal">
+          <button type="button" class="btn btn-primary opacity75" class="close" data-dismiss="modal">
             &times; Cancel
           </button>
           <button type="button" class="btn btn-warning" href="javascript:postDrop()">
