--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -376,7 +376,8 @@
 
                       <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                          <button id="signinBtn" type="submit" class="btn btn-primary" data-loading-text="<i class="fa fa-circle-o-notch fa-spin"></i>">Sign in</button>
+                          <button id="signinBtn" type="submit" class="btn btn-primary" 
+                          data-loading-text="<i class="fa fa-circle-o-notch fa-spin"></i>">Sign in</button>
                         </div>
                       </div>
                     </form>
