--- a/resources/web/userdashboard_funds.html
+++ b/resources/web/userdashboard_funds.html
@@ -179,6 +179,7 @@
                     <tr>
                       <th>Time <i class="fa fa-sort"></i></th>
                       <th>Type <i class="fa fa-sort"></th>
+                      <th>Creator <i class="fa fa-sort"></th>
                       <th>Recipient <i class="fa fa-sort"></th>
                       <th>Pieces <i class="fa fa-sort"></th>
                       <th>Total <i class="fa fa-sort"></th>
@@ -192,7 +193,8 @@
                     <tr> 
                       <td>{{time_}}</td>
                       <td>{{type}}</td>
-                      <td>{{recipient}}</td>
+                      <td><a href="/creators/main/{{creator}}">{{creator}}</a></td>
+                      <td><a href="/users/overview/{{recipient}}">{{recipient}}</a></td>
                       <td>{{pieces}}</td>
                       <td>{{total}}</td>
                     </tr>
