--- a/resources/testweb/creator_worth.html
+++ b/resources/testweb/creator_worth.html
@@ -78,9 +78,9 @@
         <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                 <ul class="dropdown-menu">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+                <ul class="dropdown-menu">
                   <li><a href="/about">About Bitpieces</a></li>
                   <li><a href="/FAQ">Frequently Asked Questions</a></li>
                   <li><a href="/contact">Contact</a></li>
