--- a/resources/web/creator_funds.html
+++ b/resources/web/creator_funds.html
@@ -139,7 +139,7 @@
          <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-money"></i> Price</a>
          <a class="list-group-item" href="/creators/worth" rel="keep-params"><i class="fa fa-building-o"></i> Worth</a>
          <a class="list-group-item" href="/creators/rewards" rel="keep-params"><i class="fa fa-trophy"></i> Rewards</a>
-         <a class="list-group-item active" href="/creators/funds" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Funds</a>
+         <a class="list-group-item active" href="/creators/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
          <a class="list-group-item" href="/creators/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
          
        </div>
