--- a/resources/testweb/about.html
+++ b/resources/testweb/about.html
@@ -60,66 +60,64 @@
      <div id="wrapper">
 
       <!-- plug into here -->
-      <nav class="navbar navbar-default" role="navigation">
-       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">BitPieces</a>
-      </div>
+        <nav class="navbar navbar-default" role="navigation">
+     <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">BitPieces</a>
+    </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-       <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/discover">Discover</a></li>
-        <li><a href="/creators_register">Creators</a></li>
-        <li><a href="userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
-               <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
-               <li><a href="#logout" class="hide">Log Out</a></li> -->
-               <li class="active dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/about">About Bitpieces</a></li>
-                  <li><a href="/FAQ">Frequently Asked Questions</a></li>
-                  <li><a href="/contact">Contact</a></li>
-                  
-
-                </ul>
-              </li>
-            </ul>
-            <form id="creator_search" class="navbar-form navbar-left navbar-input-group" role="search">
-              <div class="form-group">
-               <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
-             </div>
-             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
-           </form>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home</a></li>
+      <li><a href="/discover">Discover</a></li>
+      <li><a href="/creators_register">Creators</a></li> 
+      <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/about">About Bitpieces</a></li>
+          <li><a href="/FAQ">Frequently Asked Questions</a></li>
+          <li><a href="/contact">Contact</a></li>
 
 
-           <ul class="nav navbar-nav navbar-right">
-            <li id="userDropdown" class="dropdown user-dropdown">
+        </ul>
+      </li>
+    </ul>
+    <form id="creator_search" class="navbar-form navbar-left navbar-input-group" role="search">
+      <div class="form-group">
+       <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
+     </div>
+     <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+   </form>
 
-             <script id="usernameTemplate" type="x-tmpl-mustache">  
-               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+
+   <ul class="nav navbar-nav navbar-right">
+    <li id="userDropdown" class="dropdown user-dropdown">
+      <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
+      <script id="usernameTemplate" type="x-tmpl-mustache">  
+       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
 
 
-               <ul class="dropdown-menu">
-                 <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
-                 <li class="divider"></li>
-                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+       <ul class="dropdown-menu">
+         <li><a id="settings" href="userdashboard_settings"><i class="fa fa-gear"></i> Settings</a></li>
+         <li class="divider"></li>
+         <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
-               </ul>
-             </script>
-           </li>
-         </ul>
-       </div><!-- /.navbar-collapse -->
-     </div><!-- /.container-fluid -->
-   </nav>
+       </ul>
+     </script>
+   </li>
+ </ul>
+</div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
 
    <!-- The full page with teh sidebar -->
    <div class="container" id="mycontentcon">
